United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7149608 (tz): Default TZ detection fails on linux when symbolic links to non default location used.
7149608 : (tz): Default TZ detection fails on linux when symbolic links to non default location used.

Details
Type:
Bug
Submit Date:
2012-02-28
Status:
Resolved
Updated Date:
2012-04-12
Project Name:
JDK
Resolved Date:
2012-03-19
Component:
core-libs
OS:
generic
Sub-Component:
java.util:i18n
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
6u22
Fixed Versions:
6u31-rev

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
SHORT SUMMARY: JRE fails to detect default timezone on Linux post 6u18
INDICATORS:
A non standard setup where the /etc/localfile is symbolic but doesn't
point to a file in /usr/share/zoneinfo.

COUNTER INDICATORS:

TRIGGERS: Cu is upgrading their TIBCO product which uses JRE 6u22. 
Bug fix 6456628 has changed behaviour for default TZ detection.

KNOWN WORKAROUND: Use a static file for /etc/localtime or if Cu insists on 
using symbolic link, have it point to a directory structure idential to 
/usr/share/zoneinfo/

PRESENT SINCE: 6u18

HOW TO VERIFY:

NOTES FOR SE: Investigate if TZ detection code on linux can be altered
so that we don't create a dependency for a symbolic link to point to a 
zoneinfo
directory : 
http://opengrok.ie.oracle.com:8080/opengrok/s?defs=getZoneName&project=6.0u21_
sccs

REGRESSION: For this Cu setup - Yes. (escalated)

                                    

Comments
EVALUATION

Improve TZ detection. If symbolic link fails to refence an exact filename match in /usr/share/zoneinfo, we should treat the end file as a regular file and continue the match attempts using its contents.
                                     
2012-03-07



Hardware and Software, Engineered to Work Together