7149608: Default TZ detection fails on linux when symbolic links to non default location used. Reviewed-by: alanb, okutsu